<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group android:checkableBehavior="single" android:orderInCategory="100">
        <item
            android:id="@+id/itemHome"
            android:icon="@drawable/ic_shelf"
            android:title="@string/bookshelf"/>
        <item
            android:id="@+id/itemCat"
            android:icon="@drawable/ic_cat"
            android:title="@string/category"/>
        <item
            android:id="@+id/itemFav"
            android:icon="@drawable/ic_favorite"
            android:title="@string/my_book"/>
        <!--<item-->
            <!--android:id="@+id/itemDownload"-->
            <!--android:icon="@drawable/ic_download"-->
            <!--android:title="@string/downloaded"/>-->
    </group>
</menu>