<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".Activities.ChapterActivity">

    <include layout="@layout/toolbar_return"/>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ProgressBar
            android:id="@+id/progressbar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:visibility="gone"/>

        <ImageView
            android:id="@+id/ivBackground"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:alpha=".1"
            android:scaleType="centerCrop"/>

        <ImageView
            android:id="@+id/ivCover"
            android:layout_width="150dp"
            android:layout_height="220dp"
            android:layout_marginLeft="50dp"
            android:layout_marginTop="30dp"
            android:elevation="3dp"
            android:scaleType="fitXY"/>

        <android.support.design.widget.FloatingActionButton
            android:id="@+id/fabRead"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_marginTop="150dp"
            android:layout_marginRight="50dp"
            android:backgroundTint="@color/colorPrimary"
            android:src="@drawable/ic_book"
            android:tint="@color/white"/>

        <android.support.design.widget.FloatingActionButton
            android:id="@+id/fabFav"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_marginTop="150dp"
            android:layout_marginRight="120dp"
            android:backgroundTint="@color/colorPrimary"
            android:src="@drawable/ic_favorite"
            android:tint="@color/white"/>

        <TextView
            android:id="@+id/tvTitle"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="30dp"
            android:layout_toRightOf="@id/ivCover"
            android:ellipsize="end"
            android:maxLines="2"
            android:textColor="#000"
            android:textSize="18sp"
            android:textStyle="bold"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@id/ivBackground"
            android:orientation="vertical"
            android:padding="20dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="50dp"
                android:text="@string/category"
                android:textSize="@dimen/textDetail"
                android:textStyle="bold"/>

            <TextView
                android:id="@+id/tvCategory"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="3dp"
                android:textSize="@dimen/textDetail"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/description"
                android:textSize="@dimen/textDetail"
                android:textStyle="bold"/>

            <TextView
                android:id="@+id/tvDescription"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="3dp"
                android:textSize="@dimen/textDetail"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/toc"
                android:textSize="@dimen/textDetail"
                android:textStyle="bold"/>

            <ListView
                android:id="@+id/lvChapters"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="3dp"
                android:footerDividersEnabled="false"/>
        </LinearLayout>
    </RelativeLayout>
</LinearLayout>
